<resources>
    <string name="app_name">TemplateAppProject</string>
    <string name="app_browser_name">通用浏览器</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_news">动态</string>
    <string name="menu_trending">趋势</string>
    <string name="menu_message">消息</string>
    <string name="menu_profile">我的</string>

    <string name="menu_notifications">通知</string>
    <string name="menu_issues">问题</string>
    <string name="menu_starred">收藏</string>
    <string name="menu_search">搜索</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>

    <string name="about_copyright">© %1$s xuexiangjys All rights reserved.</string>
    <string name="about_item_homepage">访问官网</string>
    <string name="about_item_author_github">联系作者</string>
    <string name="about_item_donation_link">捐赠作者</string>
    <string name="about_item_add_qq_group">QQ交流群</string>
    <string name="url_project_github">https://github.com/xuexiangjys/TemplateAppProject</string>
    <string name="url_author_github">https://gitee.com/xuexiangjys/xuexiangjys</string>
    <string name="url_donation_link">https://gitee.com/xuexiangjys/Resource/blob/master/doc/sponsor.md</string>
    <string name="url_add_qq_group">http://qm.qq.com/cgi-bin/qm/qr?k=tiP-E6rDf0y77PRNfp2lNVcc9RsglPCM</string>

    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="lab_open_third_app">是否允许页面打开第三方应用?</string>

    <!-- 隐私政策弹窗   -->
    <string name="lab_exit_app">退出应用</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我们非常重视对你个人信息的保护，承诺严格按照《%s隐私权政策》保护及处理你的信息。如果你不同意该政策，很遗憾我们将无法为你提供服务</string>
    <string name="lab_privacy_name">《%s隐私权政策》</string>

    <!-- 登录   -->
    <string name="title_login_register">登录/注册</string>
    <string name="action_get_verify_code">获取验证码</string>
    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入4位数验证码</string>
    <string name="regex_verify_code">^\\d{4}$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="lab_logout_confirm">是否确认退出账号？</string>
    <string name="title_jump_login">跳过</string>
    <string name="label_previous">上一条</string>
    <string name="label_next">下一条</string>
    <string name="tip_ignore_message">以后不再提示此类信息</string>
    <string name="tip_title">你知道吗？</string>

    <string name="time">时间:</string>
    <string name="add">添加</string>
    <string name="Mon">周一</string>
    <string name="Tue">周二</string>
    <string name="Wed">周三</string>
    <string name="Fri">周五</string>
    <string name="Sat">周六</string>
    <string name="San">周日</string>
    <string name="Thu">周四</string>
    <string name="CourseTable">课程表</string>
    <string name="FreeTable">无课表</string>
    <string name="cancel">取消</string>
    <string name="CreateTask">创建事务</string>
    <string name="MakeSure">确认</string>
    <string name="title">标题</string>
    <string name="destination">目的地</string>
    <string name="todo_time">时间</string>
    <string name="importance">重要性</string>
    <string name="pluse">补充</string>
    <string name="todo">TODO</string>


    <string name="osmbonuspack.directions.1">Continue[ on %s]</string>
    <string name="osmbonuspack.directions.6">Turn slight right[ on %s]</string>
    <string name="osmbonuspack.directions.7">Turn right[ on %s]</string>
    <string name="osmbonuspack.directions.8">Turn sharp right[ on %s]</string>
    <string name="osmbonuspack.directions.12">U-Turn[ on %s]</string>
    <string name="osmbonuspack.directions.5">Turn sharp left[ on %s]</string>
    <string name="osmbonuspack.directions.4">Turn left[ on %s]</string>
    <string name="osmbonuspack.directions.3">Turn slight left[ on %s]</string>
    <string name="osmbonuspack.directions.24">You have reached a waypoint of your trip</string>
    <string name="osmbonuspack.directions.2">[Go on %s]</string>
    <string name="osmbonuspack.directions.27">Enter roundabout and leave at first exit[ on %s]</string>
    <string name="osmbonuspack.directions.28">Enter roundabout and leave at second exit[ on %s]</string>
    <string name="osmbonuspack.directions.29">Enter roundabout and leave at third exit[ on %s]</string>
    <string name="osmbonuspack.directions.30">Enter roundabout and leave at fourth exit[ on %s]</string>
    <string name="osmbonuspack.directions.31">Enter roundabout and leave at fifth exit[ on %s]</string>
    <string name="osmbonuspack.directions.32">Enter roundabout and leave at sixth exit[ on %s]</string>
    <string name="osmbonuspack.directions.33">Enter roundabout and leave at seventh exit[ on %s]</string>
    <string name="osmbonuspack.directions.34">Enter roundabout and leave at eighth exit[ on %s]</string>
    <string name="osmbonuspack.directions.17">Take the ramp on the left[ on %s]</string>
    <string name="osmbonuspack.directions.18">Take the ramp on the right[ on %s]</string>
    <string name="osmbonuspack.directions.19">Take the ramp straight ahead[ on %s]</string>

    <string name="osmbonuspack.format_distance_kilometers">%skm</string>
    <string name="osmbonuspack.format_distance_meters">%sm</string>

    <string name="osmbonuspack.format_hours">%sh</string>
    <string name="osmbonuspack.format_minutes">%smin</string>
    <string name="osmbonuspack.format_seconds">%ssec</string>

</resources>
