<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topPage"
            android:gravity="center"
            android:text="@string/CourseTable"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />
    <!--main panel-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topPage"
            android:orientation="vertical" >
        <!--up,week-->
        <LinearLayout
                android:background="@color/colorBackGround"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_weeks"
                android:orientation="horizontal">

            <!--left_up empty-->
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.45" >
                <TextView
                        android:id="@+id/text_this_week"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"/>
            </LinearLayout>>

            <!--Days in a week-->
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:background="@color/colorBackGround"
                    android:orientation="horizontal">
                <View
                        android:layout_width="@dimen/empty_gap"
                        android:layout_height="match_parent"
                        android:background="@color/colorGap"/>
                <TextView
                        android:id="@+id/week1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/Mon" />

                <TextView
                        android:id="@+id/week2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/Tue" />

                <TextView
                        android:id="@+id/week3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/Wed" />

                <TextView
                        android:id="@+id/week4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/Thu" />

                <TextView
                        android:id="@+id/week5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/Fri" />

                <TextView
                        android:id="@+id/week6"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/Sat" />

                <TextView
                        android:id="@+id/week7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/San" />

            </LinearLayout>

        </LinearLayout>

        <!--down ,left, index of class;right courses-->
        <ScrollView
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <!--left-->
                <LinearLayout
                        android:background="@color/colorBackGround"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/course_table_height"
                        android:orientation="vertical"
                        android:layout_weight="0.45">

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/empty_gap"
                            android:background="@color/colorGap"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="1-2"
                            android:textSize="10dp"/>
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/empty_gap"
                            android:background="@color/colorGap"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="3-4"
                            android:textSize="10dp"/>
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/empty_gap"
                            android:background="@color/colorGap"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="5-6"
                            android:textSize="10dp"/>
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/empty_gap"
                            android:background="@color/colorGap"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="7-8"
                            android:textSize="10dp"/>
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/empty_gap"
                            android:background="@color/colorGap"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="9-10"
                            android:textSize="10dp"/>
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/empty_gap"
                            android:background="@color/colorGap"/>
                </LinearLayout>
                <!--right course-->
                <GridView
                        android:id="@+id/gridView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:numColumns="7">

                </GridView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>